--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "react-dom": "^18",
     "@tanstack/react-query": "^5",
     "viem": "^2.27.2",
-    "wagmi": "^2.14.11"
+    "wagmi": "^2.14.11",
+    "frog": "latest",
+    "hono": "latest"
   },
   "devDependencies": {
     "@types/node": "^20",
